--- a/app/src/main/res/layout/activity_tv.xml
+++ b/app/src/main/res/layout/activity_tv.xml
@@ -12,18 +12,24 @@
         app:resize_mode="fill"
         />
 
-
-    <ImageView
-        android:id="@+id/watermark_logo"
-        android:layout_width="150dp"
-        android:layout_height="36dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="10dp"
-        android:src="@drawable/streamax_watermark"
-        android:rotation="180"
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/text"
+        android:text="STREAMAX"
+        android:textSize="30sp"
+        android:textColor="@color/white"
+        android:background="@color/black"
+        android:alpha="0.5"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         />
+
+
+
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
