--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,17 +13,27 @@
         />
 
 
-    <ImageView
-        android:id="@+id/watermark_logo"
+
+
+    <pl.droidsonroids.gif.GifImageView
         android:layout_width="150dp"
-        android:layout_height="36dp"
+        android:layout_height="84dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="10dp"
-        android:src="@drawable/streamax_watermark"
-        android:rotation="0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:src="@drawable/test_watermark_gif"
         />
+
+    <pl.droidsonroids.gif.GifImageView
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:src="@drawable/banner_streamax"
+        />
+
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
