--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -18,6 +18,8 @@
         android:fontFamily="@font/poppins_bold"
         android:textColor="@color/green_streamax"/>
 
+
+
     <RelativeLayout
         android:id="@+id/relative_layout_buttons"
         android:layout_width="wrap_content"
@@ -31,7 +33,8 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            tools:ignore="UselessParent">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/constraintLayout_left"
@@ -158,7 +161,13 @@
 
 
     </LinearLayout>
-
+    <pl.droidsonroids.gif.GifImageView
+        android:layout_width="150dp"
+        android:layout_height="84dp"
+        app:layout_constraintTop_toBottomOf="@+id/linearlayout_device_id"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:src="@drawable/gif_test" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
